// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createHarmonyLinkedList > handles consecutive measures with the same harmony 1`] = `
[
  {
    "attributes": {
      "key": {
        "fifths": 0,
        "type": "Key",
      },
      "time": {
        "beatType": 4,
        "beats": 4,
        "type": "Time",
      },
      "type": "Attributes",
    },
    "beat": 1,
    "duration": 4,
    "harmony": {
      "kind": "minor-seventh",
      "offset": 0,
      "root": {
        "alter": 0,
        "step": "D",
        "type": "Root",
      },
      "type": "Harmony",
    },
    "next": {
      "attributes": {
        "key": {
          "fifths": 0,
          "type": "Key",
        },
        "time": {
          "beatType": 4,
          "beats": 4,
          "type": "Time",
        },
        "type": "Attributes",
      },
      "beat": 5,
      "duration": 4,
      "harmony": {
        "kind": "minor-seventh",
        "offset": 0,
        "root": {
          "alter": 0,
          "step": "D",
          "type": "Root",
        },
        "type": "Harmony",
      },
      "next": null,
    },
  },
  {
    "attributes": {
      "key": {
        "fifths": 0,
        "type": "Key",
      },
      "time": {
        "beatType": 4,
        "beats": 4,
        "type": "Time",
      },
      "type": "Attributes",
    },
    "beat": 5,
    "duration": 4,
    "harmony": {
      "kind": "minor-seventh",
      "offset": 0,
      "root": {
        "alter": 0,
        "step": "D",
        "type": "Root",
      },
      "type": "Harmony",
    },
    "next": null,
  },
]
`;

exports[`createHarmonyLinkedList > handles half note chord durations 1`] = `
[
  {
    "attributes": {
      "key": {
        "fifths": 0,
        "type": "Key",
      },
      "time": {
        "beatType": 4,
        "beats": 4,
        "type": "Time",
      },
      "type": "Attributes",
    },
    "beat": 1,
    "duration": 2,
    "harmony": {
      "kind": "minor-seventh",
      "offset": 0,
      "root": {
        "alter": 0,
        "step": "D",
        "type": "Root",
      },
      "type": "Harmony",
    },
    "next": {
      "attributes": {
        "key": {
          "fifths": 0,
          "type": "Key",
        },
        "time": {
          "beatType": 4,
          "beats": 4,
          "type": "Time",
        },
        "type": "Attributes",
      },
      "beat": 3,
      "duration": 2,
      "harmony": {
        "kind": "dominant",
        "offset": 2,
        "root": {
          "alter": 0,
          "step": "G",
          "type": "Root",
        },
        "type": "Harmony",
      },
      "next": {
        "attributes": {
          "key": {
            "fifths": 0,
            "type": "Key",
          },
          "time": {
            "beatType": 4,
            "beats": 4,
            "type": "Time",
          },
          "type": "Attributes",
        },
        "beat": 5,
        "duration": 4,
        "harmony": {
          "kind": "major-seventh",
          "offset": 0,
          "root": {
            "alter": 0,
            "step": "C",
            "type": "Root",
          },
          "type": "Harmony",
        },
        "next": null,
      },
    },
  },
  {
    "attributes": {
      "key": {
        "fifths": 0,
        "type": "Key",
      },
      "time": {
        "beatType": 4,
        "beats": 4,
        "type": "Time",
      },
      "type": "Attributes",
    },
    "beat": 3,
    "duration": 2,
    "harmony": {
      "kind": "dominant",
      "offset": 2,
      "root": {
        "alter": 0,
        "step": "G",
        "type": "Root",
      },
      "type": "Harmony",
    },
    "next": {
      "attributes": {
        "key": {
          "fifths": 0,
          "type": "Key",
        },
        "time": {
          "beatType": 4,
          "beats": 4,
          "type": "Time",
        },
        "type": "Attributes",
      },
      "beat": 5,
      "duration": 4,
      "harmony": {
        "kind": "major-seventh",
        "offset": 0,
        "root": {
          "alter": 0,
          "step": "C",
          "type": "Root",
        },
        "type": "Harmony",
      },
      "next": null,
    },
  },
  {
    "attributes": {
      "key": {
        "fifths": 0,
        "type": "Key",
      },
      "time": {
        "beatType": 4,
        "beats": 4,
        "type": "Time",
      },
      "type": "Attributes",
    },
    "beat": 5,
    "duration": 4,
    "harmony": {
      "kind": "major-seventh",
      "offset": 0,
      "root": {
        "alter": 0,
        "step": "C",
        "type": "Root",
      },
      "type": "Harmony",
    },
    "next": null,
  },
]
`;

exports[`createHarmonyLinkedList > returns a single node list for a single chord part 1`] = `
[
  {
    "attributes": {
      "key": {
        "fifths": 0,
        "type": "Key",
      },
      "time": {
        "beatType": 4,
        "beats": 4,
        "type": "Time",
      },
      "type": "Attributes",
    },
    "beat": 1,
    "duration": 4,
    "harmony": {
      "kind": "minor-seventh",
      "offset": 0,
      "root": {
        "alter": 0,
        "step": "D",
        "type": "Root",
      },
      "type": "Harmony",
    },
    "next": null,
  },
]
`;
